Fix text cutoff on the left of Compare Plans table due to flexbox centering overflow bug

--- a/src/BrandServicePage.css
+++ b/src/BrandServicePage.css
@@ -251,8 +251,6 @@
   width: 100%;
   overflow-x: auto;
   background: transparent;
-  display: flex;
-  justify-content: center;
 }
 
 .cp-table {
